[project]
name = "hexlet-code"
version = "0.1.0"
description = "Project task manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
]
lint = [
    "ruff>=0.14.13",
]
